smartgenie-crm-data/src/main/webapp/css/style.css
/* ... */
/*
 * Correct overflow displayed oddly in IE9 
 */
svg








:not








(
:root








)
{
overflow








:








hidden






;
}

/* =============================================================================
   Figures
   ========================================================================== */
figure {
	margin: 0;
}

/* =============================================================================
   Forms
   ========================================================================== */
form {
	float: left;
	border: 1px solid #ddd;
	padding: 30px 40px 20px 40px;
	margin: 75px 0 0 0;
	width: 715px;
	background: #fff;
	/* -- CSS3 - define rounded corners -- */
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
	/* -- CSS3 - create a background gradient -- */
	background: -webkit-gradient(linear, 0% 0%, 0% 40%, from(#EEE), to(#FFF)
		);
	background: -moz-linear-gradient(0% 40% 90deg, #FFF, #EEE);
	/* -- CSS3 - add a drop shadow -- */
	-webkit-box-shadow: 0px 0 50px #ccc;
	-moz-box-shadow: 0px 0 50px #ccc;
	box-shadow: 0px 0 50px #ccc;
}

fieldset {
	border: 0;
	margin: 0;
	padding: 0;
}

input,textarea {
	padding: 8px;
	margin: 4px 10px;
	background: #fff;
	width: 220px;
	font-size: 14px;
	color: #555;
	border: 1px #ddd solid;
	/* -- CSS3 Shadow - create a shadow around each input element -- */
	-webkit-box-shadow: 0px 0px 4px #aaa;
	-moz-box-shadow: 0px 0px 4px #aaa;
	box-shadow: 0px 0px 4px #aaa;
	/* -- CSS3 Transition - define what the transition will be applied to (i.e. the background) -- */
	-webkit-transition: background 0.3s linear;
}

textarea {
	width: 300px;
	height: 100px;
}


/* 
 * 1. Correct color not inheriting in IE6/7/8/9 
 * 2. Correct alignment displayed oddly in IE6/7 
 */
legend {
	border: 0;
	*margin-left: -7px;
	padding: 0;
}

/* Indicate that 'label' will shift focus to the associated form element */
label {
	font-size: 15px;
	color: #666;
	display: block;  /* block float the labels to left column, set a width */
	float: left; 
	width: 150px; 
	padding: 0; 
	margin: 5px 0 0; /* set top margin same as form input - textarea etc. elements */
	text-align: right; 
}


/*
 * 1. Define line-height as normal to match FF3/4 (set using !important in the UA stylesheet)
 * 2. Correct inner spacing displayed oddly in IE6/7
 */
button,input {
	line-height: normal;
	*overflow: visible;
}

/*
 * 1. Display hand cursor for clickable form elements
 * 2. Allow styling of clickable form elements in iOS
 */
button,input
[type="button"],input
[type="reset"] {
	cursor: pointer;
	-webkit-appearance: button;
}

/*
 * Consistent box sizing and appearance

input
[type="checkbox"],input
[type="radio"] {
	box-sizing: border-box;
}
 */

input
[type="search"] {
	-moz-box-sizing: content-box;
	-webkit-box-sizing: content-box;
	box-sizing: content-box;
}

/* 
 * Remove inner padding and border in FF3/4
 * www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/ 
 */
button
:
:-moz-focus-inner,input
:
:-moz-focus-inner {
	border: 0;
	padding: 0;
}

/* Remove default vertical scrollbar in IE6/7/8/9 */
textarea {
	overflow: auto;
	vertical-align: top;
}

/* Colors for form validity */
input
:valid,textarea
:valid {
	
}

input:hover,textarea:hover {
	background: #eee;
}

input
:invalid,textarea
:invalid {
	background-color: #f0dddd;
}

/* =============================================================================
   Tables
   ========================================================================== */
table {
	border-collapse: collapse;
	border-spacing: 0;
}

th {
	border: 1px solid #000000;
	background-color: #A7A7A7;
	color: #fff;
	padding: 0.4em;
	text-align: left;
}

tr:nth-child(2n+1) {
  background-color: #E6E6E6;
}

/* =============================================================================
   Primary styles
   Author: 
   ========================================================================== */
.main {
	color: #567878
}

/* =============================================================================
   Non-semantic helper classes
   Please define your styles before this section.
   ========================================================================== */

/* For image replacement */
.ir {
	display: block;
	text-indent: -999em;
	overflow: hidden;
	background-repeat: no-repeat;
	text-align: left;
	direction: ltr;
}

.ir
 
br {
	display: none;
}

/* Hide for both screenreaders and browsers:
   css-discuss.incutio.com/wiki/Screenreader_Visibility */
.hidden {
	display: none;
	visibility: hidden;
}

/* Hide only visually, but have it available for screenreaders: by Jon Neal.
  www.webaim.org/techniques/css/invisiblecontent/  &  j.mp/visuallyhidden */
.visuallyhidden {
	border: 0;
	clip: rect(0, 0, 0, 0);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	width: 1px;
}

/* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: drupal.org/node/897638 */
.visuallyhidden
.focusable
:active,.visuallyhidden
.focusable
:focus {
	clip: auto;
	height: auto;
	margin: 0;
	overflow: visible;
	position: static;
	width: auto;
}

/* Hide visually and from screenreaders, but maintain layout */
.invisible {
	visibility: hidden;
}

/* Contain floats: nicolasgallagher.com/micro-clearfix-hack/ */
.clearfix
:before,.clearfix
:after {
	content: "";
	display: table;
}

.clearfix
:after {
	clear: both;
}

.clearfix {
	zoom: 1;
}

/* =============================================================================
   PLACEHOLDER Media Queries for Responsive Design.
   These override the primary ('mobile first') styles
   Modify as content requires.
   ========================================================================== */
@media only screen and (min-width: 480px) {
	/* Style adjustments for viewports 480px and over go here */
}

@media only screen and (min-width: 768px) {
	/* Style adjustments for viewports 768px and over go here */
}
/* ... */

